@@ -1,27 +1,41 @@
-ual o tipo de serviço?*:	Levantar Informações do Ambiente
-Informar o ambiente:*:	DES
-Nome do serviço ou sistema:*:	SISAQ DES
-SERVIDOR:                    caddeapllx1908.agil.nprd.caixa.gov.br
-IP:                                 10.116.198.172
-Descrição da solicitação:*:	Preciso que seja solicitado o log do DES de DEVOPS.
-Contextualização da necessidade::	LOG de hoje do SISAQ DEVOPS DES. Qualquer dúvida estou a disposição.
-Informar formas de contato:*:	teams c148698 Raquel ; c068732 Carlos; c111772 Sara
 
-
-
-Warning: Permanently added '10.116.198.172' (ED25519) to the list of known hosts.
-p585600@10.116.198.172's password:
-Creating home directory for p585600.
 -sh-4.2$
+-sh-4.2$ ls -ls /logs/jboss/jboss-eap/standalone/sisaq-web/
+total 2296
+   0 -rw-r--r-- 1 jboss jboss       0 Mai 22 15:53 audit.log
+  20 -rw-r--r-- 1 jboss jboss   17978 Ago 11 11:14 backupgc.log.current
+ 496 -rw-r--r-- 1 root  root   503932 Ago 11 11:43 console-stdout.log
+  24 -rw-r--r-- 1 jboss jboss   23825 Ago 11 13:56 gc.log.0.current
+1140 -rw-r--r-- 1 jboss jboss 1165681 Ago 11 11:43 server.log
+   4 -rw-r--r-- 1 jboss jboss    2994 Jul 11 23:50 server.log.2026-07-11.gz
+   4 -rw-r--r-- 1 jboss jboss    2992 Jul 12 23:50 server.log.2026-07-12.gz
+  40 -rw-r--r-- 1 jboss jboss   37487 Jul 13 23:50 server.log.2026-07-13.gz
+  40 -rw-r--r-- 1 jboss jboss   39347 Jul 14 23:50 server.log.2026-07-14.gz
+  24 -rw-r--r-- 1 jboss jboss   22554 Jul 15 23:50 server.log.2026-07-15.gz
+  28 -rw-r--r-- 1 jboss jboss   26973 Jul 16 23:50 server.log.2026-07-16.gz
+  28 -rw-r--r-- 1 jboss jboss   27745 Jul 17 23:50 server.log.2026-07-17.gz
+   4 -rw-r--r-- 1 jboss jboss    3003 Jul 18 23:50 server.log.2026-07-18.gz
+   4 -rw-r--r-- 1 jboss jboss    2995 Jul 19 23:50 server.log.2026-07-19.gz
+  16 -rw-r--r-- 1 jboss jboss   16091 Jul 20 23:50 server.log.2026-07-20.gz
+  20 -rw-r--r-- 1 jboss jboss   16908 Jul 21 23:50 server.log.2026-07-21.gz
+  12 -rw-r--r-- 1 jboss jboss   11416 Jul 22 23:50 server.log.2026-07-22.gz
+  12 -rw-r--r-- 1 jboss jboss   12040 Jul 23 23:50 server.log.2026-07-23.gz
+  12 -rw-r--r-- 1 jboss jboss   11415 Jul 24 23:50 server.log.2026-07-24.gz
+   4 -rw-r--r-- 1 jboss jboss    2999 Jul 25 23:50 server.log.2026-07-25.gz
+   4 -rw-r--r-- 1 jboss jboss    2992 Jul 26 23:50 server.log.2026-07-26.gz
+  12 -rw-r--r-- 1 jboss jboss   12011 Jul 27 23:50 server.log.2026-07-27.gz
+  12 -rw-r--r-- 1 jboss jboss   11404 Jul 28 23:50 server.log.2026-07-28.gz
+  16 -rw-r--r-- 1 jboss jboss   13222 Jul 29 23:50 server.log.2026-07-29.gz
+  24 -rw-r--r-- 1 jboss jboss   23967 Jul 30 23:50 server.log.2026-07-30.gz
+  12 -rw-r--r-- 1 jboss jboss   11409 Jul 31 23:50 server.log.2026-07-31.gz
+  92 -rw-r--r-- 1 jboss jboss   93903 Ago  1 23:50 server.log.2026-08-01.gz
+   4 -rw-r--r-- 1 jboss jboss    2988 Ago  2 23:50 server.log.2026-08-02.gz
+  16 -rw-r--r-- 1 jboss jboss   14070 Ago  3 23:50 server.log.2026-08-03.gz
+  40 -rw-r--r-- 1 jboss jboss   40538 Ago  4 23:50 server.log.2026-08-04.gz
+  76 -rw-r--r-- 1 jboss jboss   76662 Ago  5 23:50 server.log.2026-08-05.gz
+  16 -rw-r--r-- 1 jboss jboss   14121 Ago  6 23:50 server.log.2026-08-06.gz
+  16 -rw-r--r-- 1 jboss jboss   13628 Ago  7 23:50 server.log.2026-08-07.gz
+   4 -rw-r--r-- 1 jboss jboss    2999 Ago  8 23:50 server.log.2026-08-08.gz
+   4 -rw-r--r-- 1 jboss jboss    3002 Ago  9 23:50 server.log.2026-08-09.gz
+  16 -rw-r--r-- 1 jboss jboss   15735 Ago 10 23:50 server.log.2026-08-10.gz
 -sh-4.2$
--sh-4.2$
--sh-4.2$
--sh-4.2$ ps -ef | grep jboss
-root     16879     1  0 11:14 ?        00:00:00 runuser jboss -c LAUNCH_JBOSS_IN_BACKGROUND=1 JBOSS_PIDFILE=/opt/jboss-eap/standalone/tmp/jboss-eap-standalone.pid /opt/jboss-eap/bin/standalone.sh                -b 0.0.0.0                -bmanagement 0.0.0.0                -Djboss.server.base.dir=/opt/jboss-eap/standalone                -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/sisaq-web -c standalone-full-ha.xml
-jboss    16882 16879  0 11:14 ?        00:00:00 /bin/sh /opt/jboss-eap/bin/standalone.sh -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/sisaq-web -c standalone-full-ha.xml
-jboss    17022 16882  0 11:14 ?        00:01:34 java -D[Standalone] -verbose:gc -Xloggc:/logs/jboss/jboss-eap/standalone/sisaq-web/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading -Xms1024m -Xmx2048m -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss-eap/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/sisaq-web -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Xbootclasspath/a:/opt/jboss-eap/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar -Dsun.util.logging.disableCallerCheck=true -Djava.util.logging.manager=org.jboss.logmanager.LogManager -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -Dorg.jboss.boot.log.file=/logs/jboss/jboss-eap/standalone/sisaq-web/server.log -Dlogging.configuration=file:/opt/jboss-eap/standalone/configuration/logging.properties -jar /opt/jboss-eap/jboss-modules.jar -mp /opt/jboss-eap/modules org.jboss.as.standalone -Djboss.home.dir=/opt/jboss-eap -Djboss.server.base.dir=/opt/jboss-eap/standalone -b 0.0.0.0 -bmanagement 0.0.0.0 -Djboss.server.base.dir=/opt/jboss-eap/standalone -Djboss.server.log.dir=/logs/jboss/jboss-eap/standalone/sisaq-web -c standalone-full-ha.xml
-p585600  28960 28910  0 14:55 pts/0    00:00:00 grep --color=auto jboss
--sh-4.2$
--sh-4.2$
--sh-4.2$
-
